--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,21 @@
     "    def __str__(self) -> str:\n",
     "        return str((self.src, self.target, self.comp))\n",
     "\n",
+    "    # given identityMap, fill out missing data in src, target, comp\n",
+    "    def completeIdentities(self) -> None:\n",
+    "        for thisObject in self.objects:\n",
+    "            thisMorphism = self.identityMap[thisObject]\n",
+    "            self.src[thisMorphism] = thisObject\n",
+    "            self.target[thisMorphism] = thisObject\n",
+    "            if thisMorphism not in self.morphisms:\n",
+    "                self.morphisms = self.morphisms + [thisMorphism]\n",
+    "            self.identityMap[thisObject] = thisMorphism\n",
+    "            for i in self.morphisms:\n",
+    "                if self.src[i] == thisObject:\n",
+    "                    self.comp[(i, thisMorphism)] = i\n",
+    "                if self.target[i] == thisObject:\n",
+    "                    self.comp[(thisMorphism, i)] = i\n",
+    "\n",
     "    # Check that all the composables have matching targets and sources.\n",
     "    def composabilityCheck(self)-> bool:\n",
     "        for second,first in self.comp.keys():\n",
@@ -82,6 +97,14 @@
     "    def addIdentities(self) -> None:\n",
     "        for thisObject in self.objects:\n",
     "            thisMorphism = \"id_\" + str(thisObject)\n",
+    "            self.identityMap[thisObject] = thisMorphism\n",
+    "        self.completeIdentities()\n",
+    "\n",
+    "    '''                \n",
+    "    # add identity morphisms to set of morphisms\n",
+    "    def addIdentities(self) -> None:\n",
+    "        for thisObject in self.objects:\n",
+    "            thisMorphism = \"id_\" + str(thisObject)\n",
     "            self.src[thisMorphism] = thisObject\n",
     "            self.target[thisMorphism] = thisObject\n",
     "            self.morphisms = self.morphisms + [thisMorphism]\n",
@@ -91,6 +114,7 @@
     "                    self.comp[(i, thisMorphism)] = i\n",
     "                if self.target[i] == thisObject:\n",
     "                    self.comp[(thisMorphism, i)] = i\n",
+    "    '''\n",
     "\n",
     "\n",
     "#############   Functor Class   ###################\n",
@@ -170,7 +194,7 @@
     "        return str((self.zeroCells, self.hom, self.identityMap, self.comp))\n",
     "    \n",
     "    # check that identities work for one cells\n",
-    "    def identityOneCell(self):\n",
+    "    def identityOneCell(self) -> bool:\n",
     "        for thisZeroCell in self.zeroCells:\n",
     "            thisIdentityOneCell = self.identityMap[thisZeroCell]\n",
     "            for zeroCell in self.zeroCells:\n",
@@ -194,7 +218,7 @@
     "        return True\n",
     "    \n",
     "    # check that identities work for two cells\n",
-    "    def identityTwoCell(self):\n",
+    "    def identityTwoCell(self) -> bool:\n",
     "        for thisZeroCell in self.zeroCells:\n",
     "            thisCategory = self.hom[(thisZeroCell, thisZeroCell)]\n",
     "            thisIdentityOneCell = self.identityMap[thisZeroCell]\n",
@@ -221,7 +245,7 @@
     "        return True\n",
     "    \n",
     "    # verify one cell composition is associative\n",
-    "    def associativityOneCell(self):\n",
+    "    def associativityOneCell(self) -> bool:\n",
     "        for aZeroCell in self.zeroCells:\n",
     "            for bZeroCell in self.zeroCells:\n",
     "                for cZeroCell in self.zeroCells:\n",
@@ -242,7 +266,7 @@
     "        return True\n",
     "    \n",
     "    # verify two cell composition is associative\n",
-    "    def associativityTwoCell(self):\n",
+    "    def associativityTwoCell(self) -> bool:\n",
     "        for aZeroCell in self.zeroCells:\n",
     "            for bZeroCell in self.zeroCells:\n",
     "                for cZeroCell in self.zeroCells:\n",
@@ -266,7 +290,7 @@
     "###############   Product Category Functions   ##############\n",
     "    \n",
     "# construct c x d \n",
-    "def productCategory(c:Category, d:Category):\n",
+    "def productCategory(c:Category, d:Category) -> Category:\n",
     "    src = srcProduct(c, d)\n",
     "    target = targetProduct(c, d)\n",
     "    comp = compProduct(c,d)\n",
@@ -275,22 +299,22 @@
     "    return productCat\n",
     "\n",
     "# construct the source dictionary for the product\n",
-    "def srcProduct(c:Category, d:Category):\n",
+    "def srcProduct(c:Category, d:Category) -> dict:\n",
     "    src = {(m1,m2):(o1, o2) for m1, o1 in c.src.items() for m2,o2 in d.src.items()}\n",
     "    return src\n",
     "\n",
     "# construct the target dictionary for the product\n",
-    "def targetProduct(c:Category, d:Category):\n",
+    "def targetProduct(c:Category, d:Category) -> dict:\n",
     "    target = {(m1,m2):(o1, o2) for m1, o1 in c.target.items() for m2,o2 in d.target.items()}\n",
     "    return target\n",
     "    \n",
     "# construct the composition dictionary for the product    \n",
-    "def compProduct(c:Category, d:Category):\n",
+    "def compProduct(c:Category, d:Category) -> dict:\n",
     "    comp = {((m1Source[0],m2Source[0]), (m1Source[1],m2Source[1])):(m1Target, m2Target) for m1Source, m1Target in c.comp.items() for m2Source, m2Target in d.comp.items()}\n",
     "    return comp\n",
     "\n",
     "# construct the identity dictionary for the product\n",
-    "def identityMapProduct (c:Category, d:Category):\n",
+    "def identityMapProduct (c:Category, d:Category) -> dict:\n",
     "    identityMap = {(ob1, ob2): (id1, id2) for ob1,id1 in c.identityMap.items() for ob2,id2 in d.identityMap.items()}\n",
     "    return identityMap"
    ]
@@ -338,16 +362,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x0000020B996BF2E0>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x0000020B996BFFA0>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x0000020B996BC580>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x0000020B996BF4C0>})"
+       "(['0_0', '0_1'], {('0_0', '0_0'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_1', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'}), ('0_0', '0_1'): ({'2_00_1': '1_0', '2_00_0': '1_0'}, {'2_00_1': '1_0', '2_00_0': '1_0'}, {('2_00_0', '2_00_0'): '2_00_0', ('2_00_0', '2_00_1'): '2_00_1', ('2_00_1', '2_00_0'): '2_00_1', ('2_00_1', '2_00_1'): '2_00_0'})}, {'0_0': '1_0', '0_1': '1_0'}, {('0_0', '0_0', '0_0'): <__main__.Functor object at 0x000001C3E3AF7310>, ('0_0', '0_0', '0_1'): <__main__.Functor object at 0x000001C3E3AF50F0>, ('0_0', '0_1', '0_1'): <__main__.Functor object at 0x000001C3E3AF5120>, ('0_1', '0_1', '0_1'): <__main__.Functor object at 0x000001C3E3AF4610>})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +410,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''\n",
+    "__init__(self, srcCat: Category, targetCat: Category, objectMap: dict, morphismMap: dict)\n",
+    "\n",
+    "self.src = src\n",
+    "self.target = target\n",
+    "self.comp = comp\n",
+    "self.objects = set(src.values()).union(set(target.values()))\n",
+    "self.morphisms = list(src.keys())\n",
+    "self.identityMap = identityMap\n",
+    "'''\n",
+    "\n",
+    "def enumerateFunctors(c:Category, d:Category) -> list:\n",
+    "    functorList = []\n",
+    "    \n",
+    "\n",
+    "    return functorList"
+   ]
   }
  ],
  "metadata": {
