--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "        self.morphisms = list(src.keys())\n",
     "        self.identityMap = identityMap\n",
     "        self.debug = debug\n",
+    "        self.homsets = {}\n",
     "\n",
     "        # if no identities are given add identities\n",
     "        if identityMap == {}:\n",
@@ -48,6 +49,8 @@
     "        assert self.composabilityCheck()\n",
     "        assert self.compositionCheck()\n",
     "        assert self.associativityCheck()\n",
+    "\n",
+    "        self.homsetMake()\n",
     "        \n",
     "    def __repr__(self) -> str:\n",
     "        return self.__str__()\n",
@@ -109,6 +112,15 @@
     "            thisMorphism = \"id_\" + str(thisObject)\n",
     "            self.identityMap[thisObject] = thisMorphism\n",
     "        self.completeIdentities()\n",
+    "\n",
+    "    def homsetMake(self) -> None:\n",
+    "        for thisMorphism in self.morphisms:\n",
+    "            src = self.src[thisMorphism]\n",
+    "            target = self.target[thisMorphism]\n",
+    "            if (src, target) not in self.homsets.keys():\n",
+    "                self.homsets[(src, target)] = []\n",
+    "            self.homsets[(src, target)].append(thisMorphism)\n",
+    "\n",
     "\n",
     "\n",
     "#############   Functor Class   ###################\n",
@@ -335,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,11 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def enumerateFunctors(c:Category, d:Category, numToFind:int = 0) -> list:\n",
+    "def enumerateFunctorsByMorphism(c:Category, d:Category, numToFind:int=0) -> list:\n",
     "    functorList = []\n",
     "    allFunctions = itertools.product(d.morphisms, repeat=len(c.morphisms))\n",
     "    for thisFunction in allFunctions:\n",
@@ -455,23 +467,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'1_0': '1_0'}\n",
-      "{'2_00_1': '2_00_1', '2_00_0': '2_00_0'}\n",
-      ", {'1_0': '1_0'}\n",
-      "{'2_00_1': '2_00_0', '2_00_0': '2_00_0'}\n",
+      "[{'1_0': 0}\n",
+      "{'2_00_1': 'id_0', '2_00_0': 'id_0'}\n",
+      ", {'1_0': 1}\n",
+      "{'2_00_1': 'id_1', '2_00_0': 'id_1'}\n",
+      ", {'1_0': 2}\n",
+      "{'2_00_1': 'id_2', '2_00_0': 'id_2'}\n",
+      ", {'1_0': 3}\n",
+      "{'2_00_1': 'id_3', '2_00_0': 'id_3'}\n",
       "]\n"
      ]
     }
    ],
    "source": [
-    "functorList = enumerateFunctors(z2,z2, 3)\n",
+    "functorList = enumerateFunctorsByMorphism(z2, c1, 0)\n",
+    "print(functorList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def enumerateFunctorsByObject(c:Category, d:Category, numToFind: int=0) -> list:\n",
+    "    functorList = []\n",
+    "    allFunctions = itertools.product(d.objects, repeat=len(c.objects))\n",
+    "    for thisFunction in allFunctions:\n",
+    "        objectMap = dict(zip(c.objects, thisFunction))\n",
+    "        morphismMap = {}\n",
+    "        for thisIdentity in c.identityMap.values():\n",
+    "            morphismMap[thisIdentity] = d.identityMap[objectMap[c.src[thisIdentity]]]\n",
+    "\n",
+    "\n",
+    "    return functorList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "functorList = enumerateFunctorsByObject(z2, z2, 0)\n",
     "print(functorList)"
    ]
   },
