--- a/computationalCategories/categories.ipynb
+++ b/computationalCategories/categories.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +79,7 @@
     "            if self.target[first] != self.src[second]:\n",
     "                if self.debug:\n",
     "                    print(\"Composability violation...\")\n",
+    "                    print((second,first))\n",
     "                return False\n",
     "        return True\n",
     "    \n",
@@ -103,6 +104,7 @@
     "                        if self.comp[(third, self.comp[second, first])] != self.comp[(self.comp[third, second], first)]:\n",
     "                            if self.debug:\n",
     "                                print(\"Associativty failure...\")\n",
+    "                                print((third, second, first))\n",
     "                            return False\n",
     "        return True\n",
     "    \n",
@@ -114,11 +116,14 @@
     "        self.completeIdentities()\n",
     "\n",
     "    def homsetMake(self) -> None:\n",
+    "\n",
+    "        for o1 in self.objects:\n",
+    "            for o2 in self.objects:\n",
+    "                self.homsets[(o1, o2)] = []\n",
+    "\n",
     "        for thisMorphism in self.morphisms:\n",
     "            src = self.src[thisMorphism]\n",
     "            target = self.target[thisMorphism]\n",
-    "            if (src, target) not in self.homsets.keys():\n",
-    "                self.homsets[(src, target)] = []\n",
     "            self.homsets[(src, target)].append(thisMorphism)\n",
     "\n",
     "\n",
@@ -347,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +369,28 @@
     "# define the identity functor\n",
     "objectMap = {0:0, 1:1, 2:2, 3:3}\n",
     "morphismMap = {i:i for i in c1.morphisms}\n",
-    "F = Functor(c1, c2, objectMap, morphismMap)"
+    "F = Functor(c1, c2, objectMap, morphismMap)\n",
+    "\n",
+    "src = {\"1_00_1\": 0, \"1_01_1\":0, \"1_01_2\":0, \"1_11_1\":1, \"id0\":0, \"id1\":1}\n",
+    "target = {\"1_00_1\": 0, \"1_01_1\":1, \"1_01_2\":1, \"1_11_1\":1, \"id0\":0, \"id1\":1}\n",
+    "comp = {(\"1_01_1\",\"1_00_1\"): \"1_01_1\", \n",
+    "        (\"1_11_1\",\"1_01_1\"): \"1_01_1\",\n",
+    "        (\"1_01_2\", \"1_00_1\"): \"1_01_2\",\n",
+    "        (\"1_11_1\", \"1_01_2\"): \"1_01_2\",\n",
+    "        (\"id0\", \"1_00_1\"): \"1_00_1\",\n",
+    "        (\"1_00_1\", \"id0\"): \"1_00_1\",\n",
+    "        (\"1_01_1\", \"id0\"): \"1_01_1\",\n",
+    "        (\"1_01_2\", \"id0\"): \"1_01_2\",\n",
+    "        (\"id1\", \"1_01_1\"): \"1_01_1\",\n",
+    "        (\"id1\", \"1_01_2\"): \"1_01_2\",\n",
+    "        (\"id1\", \"1_11_1\"): \"1_11_1\",\n",
+    "        (\"1_11_1\", \"id1\"): \"1_11_1\",\n",
+    "        (\"1_00_1\", \"1_00_1\"): \"id0\",\n",
+    "        (\"1_11_1\", \"1_11_1\"): \"id1\",\n",
+    "        (\"id0\", \"id0\"): \"id0\",\n",
+    "        (\"id1\", \"id1\"): \"id1\"}\n",
+    "\n",
+    "c3 = Category(src, target, comp, {0:\"id0\", 1:\"id1\"}, debug=True)"
    ]
   },
   {
@@ -381,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +424,7 @@
        "})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -493,38 +519,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "def enumerateFunctorsByObject(c:Category, d:Category, numToFind: int=0) -> list:\n",
     "    functorList = []\n",
-    "    allFunctions = itertools.product(d.objects, repeat=len(c.objects))\n",
-    "    for thisFunction in allFunctions:\n",
+    "    allObjectFunctions = itertools.product(d.objects, repeat=len(c.objects))\n",
+    "    for thisFunction in allObjectFunctions:\n",
     "        objectMap = dict(zip(c.objects, thisFunction))\n",
-    "        morphismMap = {}\n",
-    "        for thisIdentity in c.identityMap.values():\n",
-    "            morphismMap[thisIdentity] = d.identityMap[objectMap[c.src[thisIdentity]]]\n",
     "\n",
+    "        # create morphismMap for potential functor\n",
+    "        \n",
+    "        cHomsets = list(c.homsets.items())\n",
+    "        homSetFunctions = []\n",
+    "        for (cSrc, cTarget),cMorphismList in cHomsets:\n",
+    "            dSrc = objectMap[cSrc]\n",
+    "            dTarget = objectMap[cTarget]\n",
+    "            thisDHomset = d.homsets[(dSrc, dTarget)]\n",
+    "            homSetFunctions.append(itertools.product(thisDHomset, repeat=len(cMorphismList)))\n",
+    "\n",
+    "        allMorphismFunctions =itertools.product(*homSetFunctions)\n",
+    "        for thisMorphismFunction in allMorphismFunctions:\n",
+    "            \n",
+    "            morphismMap = {}\n",
+    "            # map identities to identities\n",
+    "            for thisIdentity in c.identityMap.values():\n",
+    "                morphismMap[thisIdentity] = d.identityMap[objectMap[c.src[thisIdentity]]]\n",
+    "            \n",
+    "            thisMorphismFunction = list(thisMorphismFunction)\n",
+    "            for _, cMorphismList in cHomsets:\n",
+    "                thisDMorphismList = thisMorphismFunction.pop(0)  \n",
+    "                morphismMap.update(dict(zip(cMorphismList,thisDMorphismList)))\n",
+    "            try:\n",
+    "                potentialFunctor = Functor(c, d, objectMap, morphismMap)\n",
+    "                functorList.append(potentialFunctor)\n",
+    "                if len(functorList) == numToFind:\n",
+    "                    return functorList\n",
+    "            except AssertionError:\n",
+    "                pass\n",
     "\n",
     "    return functorList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[{0: 0, 1: 0}\n",
+      "{'id0': 'id0', 'id1': 'id0', '1_00_1': 'id0', '1_01_1': '1_00_1', '1_01_2': '1_00_1', '1_11_1': 'id0'}\n",
+      ", {0: 0, 1: 0}\n",
+      "{'id0': 'id0', 'id1': 'id0', '1_00_1': 'id0', '1_01_1': '1_00_1', '1_01_2': 'id0', '1_11_1': 'id0'}\n",
+      ", {0: 0, 1: 0}\n",
+      "{'id0': 'id0', 'id1': 'id0', '1_00_1': 'id0', '1_01_1': 'id0', '1_01_2': '1_00_1', '1_11_1': 'id0'}\n",
+      ", {0: 0, 1: 0}\n",
+      "{'id0': 'id0', 'id1': 'id0', '1_00_1': 'id0', '1_01_1': 'id0', '1_01_2': 'id0', '1_11_1': 'id0'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_1', '1_01_2': '1_01_1', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_1', '1_01_2': '1_01_1', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_1', '1_01_2': '1_01_2', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_1', '1_01_2': '1_01_2', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_2', '1_01_2': '1_01_1', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_2', '1_01_2': '1_01_1', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_2', '1_01_2': '1_01_2', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': '1_00_1', '1_01_1': '1_01_2', '1_01_2': '1_01_2', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_1', '1_01_2': '1_01_1', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_1', '1_01_2': '1_01_1', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_1', '1_01_2': '1_01_2', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_1', '1_01_2': '1_01_2', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_2', '1_01_2': '1_01_1', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_2', '1_01_2': '1_01_1', '1_11_1': 'id1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_2', '1_01_2': '1_01_2', '1_11_1': '1_11_1'}\n",
+      ", {0: 0, 1: 1}\n",
+      "{'id0': 'id0', 'id1': 'id1', '1_00_1': 'id0', '1_01_1': '1_01_2', '1_01_2': '1_01_2', '1_11_1': 'id1'}\n",
+      ", {0: 1, 1: 1}\n",
+      "{'id0': 'id1', 'id1': 'id1', '1_00_1': 'id1', '1_01_1': '1_11_1', '1_01_2': '1_11_1', '1_11_1': 'id1'}\n",
+      ", {0: 1, 1: 1}\n",
+      "{'id0': 'id1', 'id1': 'id1', '1_00_1': 'id1', '1_01_1': '1_11_1', '1_01_2': 'id1', '1_11_1': 'id1'}\n",
+      ", {0: 1, 1: 1}\n",
+      "{'id0': 'id1', 'id1': 'id1', '1_00_1': 'id1', '1_01_1': 'id1', '1_01_2': '1_11_1', '1_11_1': 'id1'}\n",
+      ", {0: 1, 1: 1}\n",
+      "{'id0': 'id1', 'id1': 'id1', '1_00_1': 'id1', '1_01_1': 'id1', '1_01_2': 'id1', '1_11_1': 'id1'}\n",
+      "]\n"
      ]
     }
    ],
    "source": [
-    "functorList = enumerateFunctorsByObject(z2, z2, 0)\n",
+    "functorList = enumerateFunctorsByObject(c3, c3, 0)\n",
     "print(functorList)"
    ]
   },
